tests/machine/x/ocaml/outer_join.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/outer_join.ml", line 36, characters 35-42:
36 | let customers = [[("id",1);("name","Alice")];[("id",2);("name","Bob")];[("id",3);("name","Charlie")];[("id",4);("name","Diana")]]
                                        ^^^^^^^
Error: This expression has type string but an expression was expected of type
         int


Context (around line 36):
  34 | let string_slice s i j = String.sub s i (j - i)
  35 | 
  36 | let customers = [[("id",1);("name","Alice")];[("id",2);("name","Bob")];[("id",3);("name","Charlie")];[("id",4);("name","Diana")]]
  37 | let orders = [[("id",100);("customerId",1);("total",250)];[("id",101);("customerId",2);("total",125)];[("id",102);("customerId",1);("total",300)];[("id",103);("customerId",5);("total",80)]]
  38 | let result = (let __res0 = ref [] in
